...
            onValueChange = {
                itemAddFormViewModel.updateTitle(it)
            },
            label = { Text("상품명") },
            modifier = Modifier
                .fillMaxWidth()
                .testTag("textField_item_name")
        )

        if (comment.isNotEmpty()) {
            Text(comment)
        }

...
                    advancedSettingVisibility
                )
            }) {
                Text(if (advancedSettingVisibility) "간편설정" else "고급설정")
            }
            TextButton(
                modifier = Modifier.testTag("new_item_save_button"),
                onClick = {
                    itemAddFormViewModel.createItem(
                        ShoppingItem(
                            name = title,
                            amount = amount,
                            unit = unit,
...
