...
                .pointerInput(Unit) {
                    detectTapGestures {
                        viewModel.setBottomSheetState(BottomSheetState.GONE)
                        keyboardController?.hide()
                    }
                }
                .testTag("bottom_sheet_scrim"),
            content = {
                BackHandler((bottomSheetState != BottomSheetState.GONE)) {
                    viewModel.setBottomSheetState(
                        BottomSheetState.GONE
                    )
                }
...
