...
) {
    val list by viewModel.apps.observeAsState(listOf())
    val context = LocalContext.current
    Column(
        modifier = Modifier
            .padding(10.dp)
            .testTag("external_app_launcher")
    ) {
        Text(
            "앱 실행",
            modifier = Modifier
                .padding(bottom = 10.dp),
            style = TextStyle(
...
